--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.22.2",
     "vee-validate": "^2.1.0-beta.8",
     "vue": "^2.5.17",
+    "vue-recaptcha": "^1.1.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
