--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^1.0.8",
     "axios": "^0.18.0",
     "moment": "^2.22.2",
     "vee-validate": "^2.1.0-beta.8",
